// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test disabling of a Tab 1`] = `
<Tab
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  href={
    Object {
      "selectHandler": [Function],
    }
  }
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  onClose={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={Object {}}
  title="tab title"
  tooltip=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "tooltipBackgroundColor": "gray",
        "tooltipForegroundColor": "white",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-tab"
      disabled={true}
      style={
        Object {
          "minWidth": "80px",
          "width": "",
        }
      }
      visible={true}
      xcss=""
    >
      <div
        className="ui-tab sc-iwsKbI kCinFJ"
        disabled={true}
        style={
          Object {
            "minWidth": "80px",
            "width": "",
          }
        }
      >
        <Title
          className=""
          contentEditable={false}
          direction="right"
          disabled={true}
          focus={false}
          height=""
          href={
            Object {
              "selectHandler": [Function],
            }
          }
          id=""
          layout={5}
          location="none"
          noedit={true}
          nohover={false}
          noripple={true}
          onClick={[Function]}
          onClose={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={Object {}}
          title="tab title"
          tooltip=""
          visible={true}
          widget={false}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#004358",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "tooltipBackgroundColor": "gray",
                "tooltipForegroundColor": "white",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.div
              className="ui-title-bar"
              disabled={true}
              layout={5}
              style={Object {}}
              visible={true}
            >
              <div
                className="ui-title-bar sc-gzVnrw dbBGkD"
                disabled={true}
                style={Object {}}
              >
                <Styled(Label)
                  className="ui-title"
                  contentEditable={false}
                  direction="right"
                  disabled={true}
                  focus={false}
                  height=""
                  href={
                    Object {
                      "selectHandler": [Function],
                    }
                  }
                  id=""
                  layout={5}
                  location="none"
                  noedit={true}
                  nohover={false}
                  noripple={true}
                  onClick={[Function]}
                  onClose={[Function]}
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  text="tab title"
                  theme={Object {}}
                  title="tab title"
                  tooltip=""
                  visible={true}
                  widget={false}
                  width=""
                  xcss={
                    Array [
                      "
	text-align: left;
	flex: 5;
",
                    ]
                  }
                >
                  <Label
                    className="ui-title sc-dnqmqq gbybiH"
                    contentEditable={false}
                    direction="right"
                    disabled={true}
                    focus={false}
                    height=""
                    href={
                      Object {
                        "selectHandler": [Function],
                      }
                    }
                    id=""
                    layout={5}
                    location="none"
                    noedit={true}
                    nohover={false}
                    noripple={true}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onClose={[Function]}
                    onDoubleClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onUpdate={[Function]}
                    selected={false}
                    sizing="normal"
                    style={Object {}}
                    testing={true}
                    text="tab title"
                    theme={Object {}}
                    title="tab title"
                    tooltip=""
                    useedit={false}
                    visible={true}
                    widget={false}
                    width=""
                    xcss={
                      Array [
                        "
	text-align: left;
	flex: 5;
",
                      ]
                    }
                  >
                    <ThemeProvider
                      theme={
                        Object {
                          "backgroundColor": "#ffffff",
                          "borderColor": "#004358",
                          "color": "#000000",
                          "headerBackgroundColor": "#004358",
                          "headerForegroundColor": "#ffffff",
                          "headerHoverColor": "#ffe11a",
                          "hoverColor": "#c0c0c0",
                          "inputBorderColor": "#c0c0c0",
                          "tooltipBackgroundColor": "gray",
                          "tooltipForegroundColor": "white",
                          "transitionDelay": "0.5s",
                        }
                      }
                    >
                      <styled.span
                        className="ui-label ui-title sc-dnqmqq gbybiH"
                        contentEditable={false}
                        disabled={true}
                        innerRef={[Function]}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onDoubleClick={[Function]}
                        onKeyDown={[Function]}
                        onKeyPress={[Function]}
                        sizing="normal"
                        style={Object {}}
                        suppressContentEditableWarning={true}
                        visible={true}
                      >
                        <span
                          className="ui-label ui-title sc-dnqmqq gbybiH sc-bZQynM dutPGe"
                          contentEditable={false}
                          disabled={true}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onDoubleClick={[Function]}
                          onKeyDown={[Function]}
                          onKeyPress={[Function]}
                          style={Object {}}
                          suppressContentEditableWarning={true}
                        >
                          tab title
                        </span>
                      </styled.span>
                    </ThemeProvider>
                  </Label>
                </Styled(Label)>
                <styled.div
                  className="ui-title-widget"
                  contentEditable={false}
                  direction="right"
                  disabled={true}
                  focus={false}
                  height=""
                  href={
                    Object {
                      "selectHandler": [Function],
                    }
                  }
                  id=""
                  layout={5}
                  location="none"
                  noedit={true}
                  nohover={false}
                  noripple={true}
                  onClick={[Function]}
                  onClose={[Function]}
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  theme={Object {}}
                  title="tab title"
                  tooltip=""
                  visible={true}
                  widget={false}
                  width=""
                  xcss={
                    Array [
                      "
	text-align: right;
	flex: 1;
",
                    ]
                  }
                >
                  <div
                    className="ui-title-widget sc-htoDjs iXvauZ"
                    contentEditable={false}
                    direction="right"
                    disabled={true}
                    height=""
                    href={
                      Object {
                        "selectHandler": [Function],
                      }
                    }
                    id=""
                    onClick={[Function]}
                    selected={false}
                    style={Object {}}
                    title="tab title"
                    width=""
                  />
                </styled.div>
              </div>
            </styled.div>
          </ThemeProvider>
        </Title>
      </div>
    </styled.div>
  </ThemeProvider>
</Tab>
`;

exports[`Test making a Tab invisible 1`] = `
<Tab
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  href={
    Object {
      "orientation": "top",
      "selectHandler": [Function],
      "sizing": "normal",
    }
  }
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  onClose={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={Object {}}
  title="tab title"
  tooltip=""
  visible={false}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "tooltipBackgroundColor": "gray",
        "tooltipForegroundColor": "white",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-tab"
      disabled={false}
      style={
        Object {
          "minWidth": "80px",
          "width": "",
        }
      }
      visible={false}
      xcss={
        Array [
          "
	border-right: solid 1px ",
          [Function],
          ";
	border-top: solid 1px ",
          [Function],
          ";

	&:first-child {
		border-left: solid 1px ",
          [Function],
          ";
	}
",
        ]
      }
    >
      <div
        className="ui-tab sc-iwsKbI dgIoXq"
        disabled={false}
        style={
          Object {
            "minWidth": "80px",
            "width": "",
          }
        }
      >
        <Title
          className=""
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          href={
            Object {
              "orientation": "top",
              "selectHandler": [Function],
              "sizing": "normal",
            }
          }
          id=""
          layout={5}
          location="none"
          noedit={true}
          nohover={false}
          noripple={true}
          onClick={[Function]}
          onClose={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={Object {}}
          title="tab title"
          tooltip=""
          visible={true}
          widget={
            <Button
              className=""
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              href={
                Object {
                  "orientation": "top",
                  "selectHandler": [Function],
                  "sizing": "normal",
                }
              }
              iconName="times"
              iconStyle=""
              id=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              onClick={[Function]}
              onClose={[Function]}
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              theme={Object {}}
              title="tab title"
              tooltip=""
              visible={false}
              width=""
              xcss={null}
            >
              Test content
            </Button>
          }
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#004358",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "tooltipBackgroundColor": "gray",
                "tooltipForegroundColor": "white",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.div
              className="ui-title-bar"
              disabled={false}
              layout={5}
              style={Object {}}
              visible={true}
            >
              <div
                className="ui-title-bar sc-gzVnrw jmCWlU"
                disabled={false}
                style={Object {}}
              >
                <Styled(Label)
                  className="ui-title"
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  href={
                    Object {
                      "orientation": "top",
                      "selectHandler": [Function],
                      "sizing": "normal",
                    }
                  }
                  id=""
                  layout={5}
                  location="none"
                  noedit={true}
                  nohover={false}
                  noripple={true}
                  onClick={[Function]}
                  onClose={[Function]}
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  text="tab title"
                  theme={Object {}}
                  title="tab title"
                  tooltip=""
                  visible={true}
                  widget={
                    <Button
                      className=""
                      contentEditable={false}
                      direction="right"
                      disabled={false}
                      focus={false}
                      height=""
                      href={
                        Object {
                          "orientation": "top",
                          "selectHandler": [Function],
                          "sizing": "normal",
                        }
                      }
                      iconName="times"
                      iconStyle=""
                      id=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      onClick={[Function]}
                      onClose={[Function]}
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={Object {}}
                      title="tab title"
                      tooltip=""
                      visible={false}
                      width=""
                      xcss={null}
                    >
                      Test content
                    </Button>
                  }
                  width=""
                  xcss={
                    Array [
                      "
	text-align: left;
	flex: 5;
",
                    ]
                  }
                >
                  <Label
                    className="ui-title sc-dnqmqq gbybiH"
                    contentEditable={false}
                    direction="right"
                    disabled={false}
                    focus={false}
                    height=""
                    href={
                      Object {
                        "orientation": "top",
                        "selectHandler": [Function],
                        "sizing": "normal",
                      }
                    }
                    id=""
                    layout={5}
                    location="none"
                    noedit={true}
                    nohover={false}
                    noripple={true}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onClose={[Function]}
                    onDoubleClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onUpdate={[Function]}
                    selected={false}
                    sizing="normal"
                    style={Object {}}
                    testing={true}
                    text="tab title"
                    theme={Object {}}
                    title="tab title"
                    tooltip=""
                    useedit={false}
                    visible={true}
                    widget={
                      <Button
                        className=""
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        focus={false}
                        height=""
                        href={
                          Object {
                            "orientation": "top",
                            "selectHandler": [Function],
                            "sizing": "normal",
                          }
                        }
                        iconName="times"
                        iconStyle=""
                        id=""
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        onClick={[Function]}
                        onClose={[Function]}
                        selected={false}
                        sizing="normal"
                        style={Object {}}
                        testing={true}
                        theme={Object {}}
                        title="tab title"
                        tooltip=""
                        visible={false}
                        width=""
                        xcss={null}
                      >
                        Test content
                      </Button>
                    }
                    width=""
                    xcss={
                      Array [
                        "
	text-align: left;
	flex: 5;
",
                      ]
                    }
                  >
                    <ThemeProvider
                      theme={
                        Object {
                          "backgroundColor": "#ffffff",
                          "borderColor": "#004358",
                          "color": "#000000",
                          "headerBackgroundColor": "#004358",
                          "headerForegroundColor": "#ffffff",
                          "headerHoverColor": "#ffe11a",
                          "hoverColor": "#c0c0c0",
                          "inputBorderColor": "#c0c0c0",
                          "tooltipBackgroundColor": "gray",
                          "tooltipForegroundColor": "white",
                          "transitionDelay": "0.5s",
                        }
                      }
                    >
                      <styled.span
                        className="ui-label ui-title sc-dnqmqq gbybiH"
                        contentEditable={false}
                        disabled={false}
                        innerRef={[Function]}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onDoubleClick={[Function]}
                        onKeyDown={[Function]}
                        onKeyPress={[Function]}
                        sizing="normal"
                        style={Object {}}
                        suppressContentEditableWarning={true}
                        visible={true}
                      >
                        <span
                          className="ui-label ui-title sc-dnqmqq gbybiH sc-bZQynM gWaAFB"
                          contentEditable={false}
                          disabled={false}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onDoubleClick={[Function]}
                          onKeyDown={[Function]}
                          onKeyPress={[Function]}
                          style={Object {}}
                          suppressContentEditableWarning={true}
                        >
                          tab title
                        </span>
                      </styled.span>
                    </ThemeProvider>
                  </Label>
                </Styled(Label)>
                <styled.div
                  className="ui-title-widget"
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  href={
                    Object {
                      "orientation": "top",
                      "selectHandler": [Function],
                      "sizing": "normal",
                    }
                  }
                  id=""
                  layout={5}
                  location="none"
                  noedit={true}
                  nohover={false}
                  noripple={true}
                  onClick={[Function]}
                  onClose={[Function]}
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  theme={Object {}}
                  title="tab title"
                  tooltip=""
                  visible={true}
                  widget={
                    <Button
                      className=""
                      contentEditable={false}
                      direction="right"
                      disabled={false}
                      focus={false}
                      height=""
                      href={
                        Object {
                          "orientation": "top",
                          "selectHandler": [Function],
                          "sizing": "normal",
                        }
                      }
                      iconName="times"
                      iconStyle=""
                      id=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      onClick={[Function]}
                      onClose={[Function]}
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={Object {}}
                      title="tab title"
                      tooltip=""
                      visible={false}
                      width=""
                      xcss={null}
                    >
                      Test content
                    </Button>
                  }
                  width=""
                  xcss={
                    Array [
                      "
	text-align: right;
	flex: 1;
",
                    ]
                  }
                >
                  <div
                    className="ui-title-widget sc-htoDjs iXvauZ"
                    contentEditable={false}
                    direction="right"
                    disabled={false}
                    height=""
                    href={
                      Object {
                        "orientation": "top",
                        "selectHandler": [Function],
                        "sizing": "normal",
                      }
                    }
                    id=""
                    onClick={[Function]}
                    selected={false}
                    style={Object {}}
                    title="tab title"
                    width=""
                  >
                    <Button
                      className=""
                      contentEditable={false}
                      direction="right"
                      disabled={false}
                      focus={false}
                      height=""
                      href={
                        Object {
                          "orientation": "top",
                          "selectHandler": [Function],
                          "sizing": "normal",
                        }
                      }
                      iconName="times"
                      iconStyle=""
                      id=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      onClick={[Function]}
                      onClose={[Function]}
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={Object {}}
                      title="tab title"
                      tooltip=""
                      visible={false}
                      width=""
                      xcss={null}
                    >
                      <ThemeProvider
                        theme={
                          Object {
                            "backgroundColor": "#ffffff",
                            "borderColor": "#004358",
                            "color": "#000000",
                            "headerBackgroundColor": "#004358",
                            "headerForegroundColor": "#ffffff",
                            "headerHoverColor": "#ffe11a",
                            "hoverColor": "#c0c0c0",
                            "inputBorderColor": "#c0c0c0",
                            "tooltipBackgroundColor": "gray",
                            "tooltipForegroundColor": "white",
                            "transitionDelay": "0.5s",
                          }
                        }
                      >
                        <styled.div
                          className="ui-button ripple"
                          disabled={false}
                          id="Button-0"
                          onClick={[Function]}
                          style={Object {}}
                          visible={false}
                        >
                          <div
                            className="ui-button ripple sc-EHOje kJnGDV"
                            disabled={false}
                            id="Button-0"
                            onClick={[Function]}
                            style={Object {}}
                          >
                            <Icon
                              className=""
                              contentEditable={false}
                              direction="right"
                              disabled={false}
                              focus={false}
                              height=""
                              iconName="times"
                              id=""
                              imageFile=""
                              location="none"
                              noedit={false}
                              nohover={false}
                              noripple={false}
                              selected={false}
                              sizing="normal"
                              style={Object {}}
                              testing={true}
                              theme={Object {}}
                              tooltip=""
                              visible={true}
                              width=""
                              xcss={null}
                            >
                              <ThemeProvider
                                theme={
                                  Object {
                                    "backgroundColor": "#ffffff",
                                    "borderColor": "#004358",
                                    "color": "#000000",
                                    "headerBackgroundColor": "#004358",
                                    "headerForegroundColor": "#ffffff",
                                    "headerHoverColor": "#ffe11a",
                                    "hoverColor": "#c0c0c0",
                                    "inputBorderColor": "#c0c0c0",
                                    "tooltipBackgroundColor": "gray",
                                    "tooltipForegroundColor": "white",
                                    "transitionDelay": "0.5s",
                                  }
                                }
                              >
                                <styled.i
                                  className="ui-icon fa fa-fw fa-times"
                                  contentEditable={false}
                                  direction="right"
                                  disabled={false}
                                  focus={false}
                                  height=""
                                  iconName="times"
                                  id=""
                                  imageFile=""
                                  location="none"
                                  noedit={false}
                                  nohover={false}
                                  noripple={false}
                                  selected={false}
                                  sizing="normal"
                                  style={Object {}}
                                  testing={true}
                                  theme={Object {}}
                                  tooltip=""
                                  visible={true}
                                  width=""
                                  xcss={null}
                                >
                                  <i
                                    className="ui-icon fa fa-fw fa-times sc-bdVaJa rkmGs"
                                    contentEditable={false}
                                    direction="right"
                                    disabled={false}
                                    height=""
                                    id=""
                                    selected={false}
                                    style={Object {}}
                                    width=""
                                  />
                                </styled.i>
                              </ThemeProvider>
                            </Icon>
                          </div>
                        </styled.div>
                      </ThemeProvider>
                    </Button>
                  </div>
                </styled.div>
              </div>
            </styled.div>
          </ThemeProvider>
        </Title>
      </div>
    </styled.div>
  </ThemeProvider>
</Tab>
`;

exports[`Test retrieval of Tab props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "href": Object {
    "orientation": "top",
    "selectHandler": [Function],
    "sizing": "normal",
  },
  "id": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onClick": [Function],
  "onClose": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": Object {},
  "title": "",
  "tooltip": "",
  "visible": true,
  "width": "",
  "xcss": null,
}
`;

exports[`Test the click handler in the Tab instance 1`] = `
<Tab
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  href={
    Object {
      "selectHandler": [Function],
    }
  }
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  onClose={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={Object {}}
  title="tab title"
  tooltip=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "tooltipBackgroundColor": "gray",
        "tooltipForegroundColor": "white",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-tab"
      disabled={false}
      style={
        Object {
          "minWidth": "80px",
          "width": "",
        }
      }
      visible={true}
      xcss=""
    >
      <div
        className="ui-tab sc-iwsKbI jjGbGn"
        disabled={false}
        style={
          Object {
            "minWidth": "80px",
            "width": "",
          }
        }
      >
        <Title
          className=""
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          href={
            Object {
              "selectHandler": [Function],
            }
          }
          id=""
          layout={5}
          location="none"
          noedit={true}
          nohover={false}
          noripple={true}
          onClick={[Function]}
          onClose={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={Object {}}
          title="tab title"
          tooltip=""
          visible={true}
          widget={
            <Button
              className=""
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              href={
                Object {
                  "selectHandler": [Function],
                }
              }
              iconName="times"
              iconStyle=""
              id=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              onClick={[Function]}
              onClose={[Function]}
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              theme={Object {}}
              title="tab title"
              tooltip=""
              visible={true}
              width=""
              xcss={null}
            >
              Test content
            </Button>
          }
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#004358",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "tooltipBackgroundColor": "gray",
                "tooltipForegroundColor": "white",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.div
              className="ui-title-bar"
              disabled={false}
              layout={5}
              style={Object {}}
              visible={true}
            >
              <div
                className="ui-title-bar sc-gzVnrw jmCWlU"
                disabled={false}
                style={Object {}}
              >
                <Styled(Label)
                  className="ui-title"
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  href={
                    Object {
                      "selectHandler": [Function],
                    }
                  }
                  id=""
                  layout={5}
                  location="none"
                  noedit={true}
                  nohover={false}
                  noripple={true}
                  onClick={[Function]}
                  onClose={[Function]}
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  text="tab title"
                  theme={Object {}}
                  title="tab title"
                  tooltip=""
                  visible={true}
                  widget={
                    <Button
                      className=""
                      contentEditable={false}
                      direction="right"
                      disabled={false}
                      focus={false}
                      height=""
                      href={
                        Object {
                          "selectHandler": [Function],
                        }
                      }
                      iconName="times"
                      iconStyle=""
                      id=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      onClick={[Function]}
                      onClose={[Function]}
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={Object {}}
                      title="tab title"
                      tooltip=""
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      Test content
                    </Button>
                  }
                  width=""
                  xcss={
                    Array [
                      "
	text-align: left;
	flex: 5;
",
                    ]
                  }
                >
                  <Label
                    className="ui-title sc-dnqmqq gbybiH"
                    contentEditable={false}
                    direction="right"
                    disabled={false}
                    focus={false}
                    height=""
                    href={
                      Object {
                        "selectHandler": [Function],
                      }
                    }
                    id=""
                    layout={5}
                    location="none"
                    noedit={true}
                    nohover={false}
                    noripple={true}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onClose={[Function]}
                    onDoubleClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onUpdate={[Function]}
                    selected={false}
                    sizing="normal"
                    style={Object {}}
                    testing={true}
                    text="tab title"
                    theme={Object {}}
                    title="tab title"
                    tooltip=""
                    useedit={false}
                    visible={true}
                    widget={
                      <Button
                        className=""
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        focus={false}
                        height=""
                        href={
                          Object {
                            "selectHandler": [Function],
                          }
                        }
                        iconName="times"
                        iconStyle=""
                        id=""
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        onClick={[Function]}
                        onClose={[Function]}
                        selected={false}
                        sizing="normal"
                        style={Object {}}
                        testing={true}
                        theme={Object {}}
                        title="tab title"
                        tooltip=""
                        visible={true}
                        width=""
                        xcss={null}
                      >
                        Test content
                      </Button>
                    }
                    width=""
                    xcss={
                      Array [
                        "
	text-align: left;
	flex: 5;
",
                      ]
                    }
                  >
                    <ThemeProvider
                      theme={
                        Object {
                          "backgroundColor": "#ffffff",
                          "borderColor": "#004358",
                          "color": "#000000",
                          "headerBackgroundColor": "#004358",
                          "headerForegroundColor": "#ffffff",
                          "headerHoverColor": "#ffe11a",
                          "hoverColor": "#c0c0c0",
                          "inputBorderColor": "#c0c0c0",
                          "tooltipBackgroundColor": "gray",
                          "tooltipForegroundColor": "white",
                          "transitionDelay": "0.5s",
                        }
                      }
                    >
                      <styled.span
                        className="ui-label ui-title sc-dnqmqq gbybiH"
                        contentEditable={false}
                        disabled={false}
                        innerRef={[Function]}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onDoubleClick={[Function]}
                        onKeyDown={[Function]}
                        onKeyPress={[Function]}
                        sizing="normal"
                        style={Object {}}
                        suppressContentEditableWarning={true}
                        visible={true}
                      >
                        <span
                          className="ui-label ui-title sc-dnqmqq gbybiH sc-bZQynM gWaAFB"
                          contentEditable={false}
                          disabled={false}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onDoubleClick={[Function]}
                          onKeyDown={[Function]}
                          onKeyPress={[Function]}
                          style={Object {}}
                          suppressContentEditableWarning={true}
                        >
                          tab title
                        </span>
                      </styled.span>
                    </ThemeProvider>
                  </Label>
                </Styled(Label)>
                <styled.div
                  className="ui-title-widget"
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  href={
                    Object {
                      "selectHandler": [Function],
                    }
                  }
                  id=""
                  layout={5}
                  location="none"
                  noedit={true}
                  nohover={false}
                  noripple={true}
                  onClick={[Function]}
                  onClose={[Function]}
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  theme={Object {}}
                  title="tab title"
                  tooltip=""
                  visible={true}
                  widget={
                    <Button
                      className=""
                      contentEditable={false}
                      direction="right"
                      disabled={false}
                      focus={false}
                      height=""
                      href={
                        Object {
                          "selectHandler": [Function],
                        }
                      }
                      iconName="times"
                      iconStyle=""
                      id=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      onClick={[Function]}
                      onClose={[Function]}
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={Object {}}
                      title="tab title"
                      tooltip=""
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      Test content
                    </Button>
                  }
                  width=""
                  xcss={
                    Array [
                      "
	text-align: right;
	flex: 1;
",
                    ]
                  }
                >
                  <div
                    className="ui-title-widget sc-htoDjs iXvauZ"
                    contentEditable={false}
                    direction="right"
                    disabled={false}
                    height=""
                    href={
                      Object {
                        "selectHandler": [Function],
                      }
                    }
                    id=""
                    onClick={[Function]}
                    selected={false}
                    style={Object {}}
                    title="tab title"
                    width=""
                  >
                    <Button
                      className=""
                      contentEditable={false}
                      direction="right"
                      disabled={false}
                      focus={false}
                      height=""
                      href={
                        Object {
                          "selectHandler": [Function],
                        }
                      }
                      iconName="times"
                      iconStyle=""
                      id=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      onClick={[Function]}
                      onClose={[Function]}
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={Object {}}
                      title="tab title"
                      tooltip=""
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      <ThemeProvider
                        theme={
                          Object {
                            "backgroundColor": "#ffffff",
                            "borderColor": "#004358",
                            "color": "#000000",
                            "headerBackgroundColor": "#004358",
                            "headerForegroundColor": "#ffffff",
                            "headerHoverColor": "#ffe11a",
                            "hoverColor": "#c0c0c0",
                            "inputBorderColor": "#c0c0c0",
                            "tooltipBackgroundColor": "gray",
                            "tooltipForegroundColor": "white",
                            "transitionDelay": "0.5s",
                          }
                        }
                      >
                        <styled.div
                          className="ui-button ripple"
                          disabled={false}
                          id="Button-0"
                          onClick={[Function]}
                          style={Object {}}
                          visible={true}
                        >
                          <div
                            className="ui-button ripple sc-EHOje jQdaQk"
                            disabled={false}
                            id="Button-0"
                            onClick={[Function]}
                            style={Object {}}
                          >
                            <Icon
                              className=""
                              contentEditable={false}
                              direction="right"
                              disabled={false}
                              focus={false}
                              height=""
                              iconName="times"
                              id=""
                              imageFile=""
                              location="none"
                              noedit={false}
                              nohover={false}
                              noripple={false}
                              selected={false}
                              sizing="normal"
                              style={Object {}}
                              testing={true}
                              theme={Object {}}
                              tooltip=""
                              visible={true}
                              width=""
                              xcss={null}
                            >
                              <ThemeProvider
                                theme={
                                  Object {
                                    "backgroundColor": "#ffffff",
                                    "borderColor": "#004358",
                                    "color": "#000000",
                                    "headerBackgroundColor": "#004358",
                                    "headerForegroundColor": "#ffffff",
                                    "headerHoverColor": "#ffe11a",
                                    "hoverColor": "#c0c0c0",
                                    "inputBorderColor": "#c0c0c0",
                                    "tooltipBackgroundColor": "gray",
                                    "tooltipForegroundColor": "white",
                                    "transitionDelay": "0.5s",
                                  }
                                }
                              >
                                <styled.i
                                  className="ui-icon fa fa-fw fa-times"
                                  contentEditable={false}
                                  direction="right"
                                  disabled={false}
                                  focus={false}
                                  height=""
                                  iconName="times"
                                  id=""
                                  imageFile=""
                                  location="none"
                                  noedit={false}
                                  nohover={false}
                                  noripple={false}
                                  selected={false}
                                  sizing="normal"
                                  style={Object {}}
                                  testing={true}
                                  theme={Object {}}
                                  tooltip=""
                                  visible={true}
                                  width=""
                                  xcss={null}
                                >
                                  <i
                                    className="ui-icon fa fa-fw fa-times sc-bdVaJa rkmGs"
                                    contentEditable={false}
                                    direction="right"
                                    disabled={false}
                                    height=""
                                    id=""
                                    selected={false}
                                    style={Object {}}
                                    width=""
                                  />
                                </styled.i>
                              </ThemeProvider>
                            </Icon>
                          </div>
                        </styled.div>
                      </ThemeProvider>
                    </Button>
                  </div>
                </styled.div>
              </div>
            </styled.div>
          </ThemeProvider>
        </Title>
      </div>
    </styled.div>
  </ThemeProvider>
</Tab>
`;

exports[`Test the close click handler on a Tab instance 1`] = `
<Tab
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  href={
    Object {
      "hiddenTabHandler": [Function],
    }
  }
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  onClose={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={Object {}}
  title="tab title"
  tooltip=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "tooltipBackgroundColor": "gray",
        "tooltipForegroundColor": "white",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-tab"
      disabled={false}
      style={
        Object {
          "minWidth": "80px",
          "width": "",
        }
      }
      visible={true}
      xcss=""
    >
      <div
        className="ui-tab sc-iwsKbI jjGbGn"
        disabled={false}
        style={
          Object {
            "minWidth": "80px",
            "width": "",
          }
        }
      >
        <Title
          className=""
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          href={
            Object {
              "hiddenTabHandler": [Function],
            }
          }
          id=""
          layout={5}
          location="none"
          noedit={true}
          nohover={false}
          noripple={true}
          onClick={[Function]}
          onClose={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={Object {}}
          title="tab title"
          tooltip=""
          visible={true}
          widget={
            <Button
              className=""
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              href={
                Object {
                  "hiddenTabHandler": [Function],
                }
              }
              iconName="times"
              iconStyle=""
              id=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              onClick={[Function]}
              onClose={[Function]}
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              theme={Object {}}
              title="tab title"
              tooltip=""
              visible={true}
              width=""
              xcss={null}
            >
              Test content
            </Button>
          }
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#004358",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "tooltipBackgroundColor": "gray",
                "tooltipForegroundColor": "white",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.div
              className="ui-title-bar"
              disabled={false}
              layout={5}
              style={Object {}}
              visible={true}
            >
              <div
                className="ui-title-bar sc-gzVnrw jmCWlU"
                disabled={false}
                style={Object {}}
              >
                <Styled(Label)
                  className="ui-title"
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  href={
                    Object {
                      "hiddenTabHandler": [Function],
                    }
                  }
                  id=""
                  layout={5}
                  location="none"
                  noedit={true}
                  nohover={false}
                  noripple={true}
                  onClick={[Function]}
                  onClose={[Function]}
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  text="tab title"
                  theme={Object {}}
                  title="tab title"
                  tooltip=""
                  visible={true}
                  widget={
                    <Button
                      className=""
                      contentEditable={false}
                      direction="right"
                      disabled={false}
                      focus={false}
                      height=""
                      href={
                        Object {
                          "hiddenTabHandler": [Function],
                        }
                      }
                      iconName="times"
                      iconStyle=""
                      id=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      onClick={[Function]}
                      onClose={[Function]}
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={Object {}}
                      title="tab title"
                      tooltip=""
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      Test content
                    </Button>
                  }
                  width=""
                  xcss={
                    Array [
                      "
	text-align: left;
	flex: 5;
",
                    ]
                  }
                >
                  <Label
                    className="ui-title sc-dnqmqq gbybiH"
                    contentEditable={false}
                    direction="right"
                    disabled={false}
                    focus={false}
                    height=""
                    href={
                      Object {
                        "hiddenTabHandler": [Function],
                      }
                    }
                    id=""
                    layout={5}
                    location="none"
                    noedit={true}
                    nohover={false}
                    noripple={true}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onClose={[Function]}
                    onDoubleClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onUpdate={[Function]}
                    selected={false}
                    sizing="normal"
                    style={Object {}}
                    testing={true}
                    text="tab title"
                    theme={Object {}}
                    title="tab title"
                    tooltip=""
                    useedit={false}
                    visible={true}
                    widget={
                      <Button
                        className=""
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        focus={false}
                        height=""
                        href={
                          Object {
                            "hiddenTabHandler": [Function],
                          }
                        }
                        iconName="times"
                        iconStyle=""
                        id=""
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        onClick={[Function]}
                        onClose={[Function]}
                        selected={false}
                        sizing="normal"
                        style={Object {}}
                        testing={true}
                        theme={Object {}}
                        title="tab title"
                        tooltip=""
                        visible={true}
                        width=""
                        xcss={null}
                      >
                        Test content
                      </Button>
                    }
                    width=""
                    xcss={
                      Array [
                        "
	text-align: left;
	flex: 5;
",
                      ]
                    }
                  >
                    <ThemeProvider
                      theme={
                        Object {
                          "backgroundColor": "#ffffff",
                          "borderColor": "#004358",
                          "color": "#000000",
                          "headerBackgroundColor": "#004358",
                          "headerForegroundColor": "#ffffff",
                          "headerHoverColor": "#ffe11a",
                          "hoverColor": "#c0c0c0",
                          "inputBorderColor": "#c0c0c0",
                          "tooltipBackgroundColor": "gray",
                          "tooltipForegroundColor": "white",
                          "transitionDelay": "0.5s",
                        }
                      }
                    >
                      <styled.span
                        className="ui-label ui-title sc-dnqmqq gbybiH"
                        contentEditable={false}
                        disabled={false}
                        innerRef={[Function]}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onDoubleClick={[Function]}
                        onKeyDown={[Function]}
                        onKeyPress={[Function]}
                        sizing="normal"
                        style={Object {}}
                        suppressContentEditableWarning={true}
                        visible={true}
                      >
                        <span
                          className="ui-label ui-title sc-dnqmqq gbybiH sc-bZQynM gWaAFB"
                          contentEditable={false}
                          disabled={false}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onDoubleClick={[Function]}
                          onKeyDown={[Function]}
                          onKeyPress={[Function]}
                          style={Object {}}
                          suppressContentEditableWarning={true}
                        >
                          tab title
                        </span>
                      </styled.span>
                    </ThemeProvider>
                  </Label>
                </Styled(Label)>
                <styled.div
                  className="ui-title-widget"
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  href={
                    Object {
                      "hiddenTabHandler": [Function],
                    }
                  }
                  id=""
                  layout={5}
                  location="none"
                  noedit={true}
                  nohover={false}
                  noripple={true}
                  onClick={[Function]}
                  onClose={[Function]}
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  theme={Object {}}
                  title="tab title"
                  tooltip=""
                  visible={true}
                  widget={
                    <Button
                      className=""
                      contentEditable={false}
                      direction="right"
                      disabled={false}
                      focus={false}
                      height=""
                      href={
                        Object {
                          "hiddenTabHandler": [Function],
                        }
                      }
                      iconName="times"
                      iconStyle=""
                      id=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      onClick={[Function]}
                      onClose={[Function]}
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={Object {}}
                      title="tab title"
                      tooltip=""
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      Test content
                    </Button>
                  }
                  width=""
                  xcss={
                    Array [
                      "
	text-align: right;
	flex: 1;
",
                    ]
                  }
                >
                  <div
                    className="ui-title-widget sc-htoDjs iXvauZ"
                    contentEditable={false}
                    direction="right"
                    disabled={false}
                    height=""
                    href={
                      Object {
                        "hiddenTabHandler": [Function],
                      }
                    }
                    id=""
                    onClick={[Function]}
                    selected={false}
                    style={Object {}}
                    title="tab title"
                    width=""
                  >
                    <Button
                      className=""
                      contentEditable={false}
                      direction="right"
                      disabled={false}
                      focus={false}
                      height=""
                      href={
                        Object {
                          "hiddenTabHandler": [Function],
                        }
                      }
                      iconName="times"
                      iconStyle=""
                      id=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      onClick={[Function]}
                      onClose={[Function]}
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={Object {}}
                      title="tab title"
                      tooltip=""
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      <ThemeProvider
                        theme={
                          Object {
                            "backgroundColor": "#ffffff",
                            "borderColor": "#004358",
                            "color": "#000000",
                            "headerBackgroundColor": "#004358",
                            "headerForegroundColor": "#ffffff",
                            "headerHoverColor": "#ffe11a",
                            "hoverColor": "#c0c0c0",
                            "inputBorderColor": "#c0c0c0",
                            "tooltipBackgroundColor": "gray",
                            "tooltipForegroundColor": "white",
                            "transitionDelay": "0.5s",
                          }
                        }
                      >
                        <styled.div
                          className="ui-button ripple"
                          disabled={false}
                          id="Button-0"
                          onClick={[Function]}
                          style={Object {}}
                          visible={true}
                        >
                          <div
                            className="ui-button ripple sc-EHOje jQdaQk"
                            disabled={false}
                            id="Button-0"
                            onClick={[Function]}
                            style={Object {}}
                          >
                            <Icon
                              className=""
                              contentEditable={false}
                              direction="right"
                              disabled={false}
                              focus={false}
                              height=""
                              iconName="times"
                              id=""
                              imageFile=""
                              location="none"
                              noedit={false}
                              nohover={false}
                              noripple={false}
                              selected={false}
                              sizing="normal"
                              style={Object {}}
                              testing={true}
                              theme={Object {}}
                              tooltip=""
                              visible={true}
                              width=""
                              xcss={null}
                            >
                              <ThemeProvider
                                theme={
                                  Object {
                                    "backgroundColor": "#ffffff",
                                    "borderColor": "#004358",
                                    "color": "#000000",
                                    "headerBackgroundColor": "#004358",
                                    "headerForegroundColor": "#ffffff",
                                    "headerHoverColor": "#ffe11a",
                                    "hoverColor": "#c0c0c0",
                                    "inputBorderColor": "#c0c0c0",
                                    "tooltipBackgroundColor": "gray",
                                    "tooltipForegroundColor": "white",
                                    "transitionDelay": "0.5s",
                                  }
                                }
                              >
                                <styled.i
                                  className="ui-icon fa fa-fw fa-times"
                                  contentEditable={false}
                                  direction="right"
                                  disabled={false}
                                  focus={false}
                                  height=""
                                  iconName="times"
                                  id=""
                                  imageFile=""
                                  location="none"
                                  noedit={false}
                                  nohover={false}
                                  noripple={false}
                                  selected={false}
                                  sizing="normal"
                                  style={Object {}}
                                  testing={true}
                                  theme={Object {}}
                                  tooltip=""
                                  visible={true}
                                  width=""
                                  xcss={null}
                                >
                                  <i
                                    className="ui-icon fa fa-fw fa-times sc-bdVaJa rkmGs"
                                    contentEditable={false}
                                    direction="right"
                                    disabled={false}
                                    height=""
                                    id=""
                                    selected={false}
                                    style={Object {}}
                                    width=""
                                  />
                                </styled.i>
                              </ThemeProvider>
                            </Icon>
                          </div>
                        </styled.div>
                      </ThemeProvider>
                    </Button>
                  </div>
                </styled.div>
              </div>
            </styled.div>
          </ThemeProvider>
        </Title>
      </div>
    </styled.div>
  </ThemeProvider>
</Tab>
`;

exports[`Test the creation of a Tab instance 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "tooltipBackgroundColor": "gray",
      "tooltipForegroundColor": "white",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-tab ui-selected"
    disabled={false}
    style={
      Object {
        "minWidth": "80px",
        "width": "",
      }
    }
    visible={true}
    xcss={
      Array [
        "
	border-right: solid 1px ",
        [Function],
        ";
	border-top: solid 1px ",
        [Function],
        ";

	&:first-child {
		border-left: solid 1px ",
        [Function],
        ";
	}
",
      ]
    }
  >
    <Title
      className=""
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      href={
        Object {
          "orientation": "top",
          "selectHandler": [Function],
          "sizing": "normal",
        }
      }
      id=""
      layout={5}
      location="none"
      noedit={true}
      nohover={false}
      noripple={true}
      onClick={[Function]}
      onClose={[Function]}
      selected={true}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={Object {}}
      title="tab title"
      tooltip=""
      visible={true}
      widget={
        <Button
          className=""
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          href={
            Object {
              "orientation": "top",
              "selectHandler": [Function],
              "sizing": "normal",
            }
          }
          iconName="times"
          iconStyle=""
          id=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          onClick={[Function]}
          onClose={[Function]}
          selected={true}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={Object {}}
          title="tab title"
          tooltip=""
          visible={true}
          width=""
          xcss={null}
        >
          Test content
        </Button>
      }
      width=""
      xcss={null}
    >
      Test content
    </Title>
  </styled.div>
</ThemeProvider>
`;
